[gd_scene load_steps=7 format=2]

[ext_resource path="res://menu/customize/scripts/customizeItem.gd" type="Script" id=1]
[ext_resource path="res://menu/customize/scripts/customizeButtonControl.gd" type="Script" id=2]
[ext_resource path="res://pieceSets/default/sprites/default4.png" type="Texture" id=3]
[ext_resource path="res://menu/customize/sprites/inUse.png" type="Texture" id=4]
[ext_resource path="res://menu/customize/sprites/select.png" type="Texture" id=5]
[ext_resource path="res://menu/customize/sprites/unlock.png" type="Texture" id=6]

[node name="customizeItem" type="CenterContainer"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="."]
scale = Vector2( 1.77, 1.77 )
texture = ExtResource( 3 )
centered = false

[node name="buttonControl" type="Node2D" parent="."]
position = Vector2( 0, 390 )
script = ExtResource( 2 )

[node name="selectButton" type="TextureButton" parent="buttonControl"]
margin_right = 40.0
margin_bottom = 40.0
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="unlockButton" type="TextureButton" parent="buttonControl"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
